--- a/app/public/wp-content/themes/cool-glamping/css/modules/flip-container.css
+++ b/app/public/wp-content/themes/cool-glamping/css/modules/flip-container.css
@@ -1,6 +1,7 @@
 /* entire container, keeps perspective */
 .flip-container {
 	perspective: 1000px;
+  overflow: hidden;
 
   &__inner-front {
     background-color: $mainGreen;
