--- a/app/public/wp-content/themes/cool-glamping/style.css
+++ b/app/public/wp-content/themes/cool-glamping/style.css
@@ -637,9 +637,9 @@ p, li {
             flex-direction: column;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 
   }
 
@@ -1155,6 +1155,7 @@ p, li {
 .flip-container {
 	-webkit-perspective: 1000px;
 	        perspective: 1000px;
+  overflow: hidden;
 }
 
 .flip-container__inner-front {
